<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen_perfil_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ScreenUser">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_users"
        android:layout_margin="6dp"
        android:text="@string/text_titulo"
        android:maxWidth="300dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_slogan"
        android:layout_margin="6dp"
        android:text="@string/app_slogan"
        android:maxWidth="300dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_users"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_item_user"
        android:background="@color/white"
        android:padding="6dp"
        android:layout_margin="6dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView_slogan"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/image_user"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_slogan"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_user_name"
                android:text="@string/text_user_name"
                android:textSize="18sp"
                android:layout_marginStart="70dp"
                android:layout_alignParentTop="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_user_email"
                android:text="@string/text_user_email"
                android:textSize="12sp"
                android:layout_below="@id/textView_user_name"
                android:layout_marginStart="70dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_user_cpf"
                android:text="@string/text_user_cpf"
                android:textSize="12sp"
                android:layout_below="@id/textView_user_email"
                android:layout_marginStart="70dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_user_cell"
                android:text="@string/text_user_cell"
                android:textSize="12sp"
                android:layout_below="@id/textView_user_cpf"
                android:layout_marginStart="70dp"/>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/button_logout"
                android:background="@color/black"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="56dp"
                android:contentDescription="Botão para fazer logout da conta"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/pannel_vip_client"
        android:background="@color/white"
        android:padding="6dp"
        android:layout_margin="6dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/card_item_user"
        app:layout_constraintBottom_toTopOf="@id/pannel_agend"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_vip_client1"
                android:text="@string/text_vip_client"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="140dp"
                android:layout_alignParentTop="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_vip_client2"
                android:text="@string/text_vip_client_slogan"
                android:textSize="12sp"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:layout_below="@id/textView_vip_client1"
                android:layout_marginStart="80dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_qntdd_vip_client"
                android:text="0"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_below="@id/textView_vip_client2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="170dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_vip_client3"
                android:text="@string/text_vip_client_complemento"
                android:textSize="14sp"
                android:textStyle="italic|bold"
                android:textColor="@color/black"
                android:layout_below="@id/textView_qntdd_vip_client"
                android:layout_marginStart="50dp"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/pannel_agend"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pannel_vip_client"
        android:padding="6dp"
        android:layout_margin="6dp"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_total_agendado"
                android:text="@string/text_total_agendado"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="110dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_numero_agend"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_below="@id/textView_total_agendado"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="170dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_text_agradecimento"
                android:text="@string/text_agradecimento"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:textColor="@color/black"
                android:layout_below="@id/textView_numero_agend"
                android:layout_marginStart="90dp"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>