<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CadasterActivity"

    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-62dp">

        <ImageView
            android:id="@+id/logocad"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/text_cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_cad"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logocad"
             />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_nome_cad"
            android:layout_width="354dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_edit_normal"
            android:hint="@string/text_name"
            android:inputType="text"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_cad"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_numero_cad"
            android:layout_width="354dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_edit_normal"
            android:hint="@string/text_numero"
            android:imeOptions="actionDone"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_nome_cad"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_email_cad"
            android:layout_width="354dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_edit_normal"
            android:hint="@string/text_email"
            android:inputType="text"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_numero_cad"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_password_cad"
            android:layout_width="354dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_edit_normal"
            android:hint="@string/text_password"
            android:imeOptions="actionDone"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_email_cad"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_button_normal"
            android:letterSpacing="0.04"
            android:text="@string/text_cadaster"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password_cad"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textView_jaTemLogin_cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_just_have_login"
            android:background="@color/black"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_cad" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>