<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">



        <ImageView
            android:id="@+id/logocad"
            android:layout_width="400dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
           />


        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_login"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logocad"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_email_log"
            android:layout_width="354dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_edit_normal"
            android:hint="@string/text_email"
            android:inputType="text"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_login"
            android:layout_marginTop="10dp"
            />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_password_log"
            android:layout_width="354dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_edit_normal"
            android:hint="@string/text_password"
            android:imeOptions="actionDone"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_email_log"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_button_normal"
            android:letterSpacing="0.04"
            android:text="@string/text_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_password_log"
            android:layout_marginTop="20dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_esquecisenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/text_forgot_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textView_novaconta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/black"
            android:onClick="cadastro"
            android:text="@string/text_new_acount"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_esquecisenha" />


</androidx.constraintlayout.widget.ConstraintLayout>